Version 0.02-3 (10-28-2011) (MF)
	o Init3d() adds ... to rgl.open()
	o merged documentation and examples from p3d.beta :: man/Smoking.Rd

Version 0.02-2 (05-27-2011) (MF)
	o Added missing ellipsoid function
	o Fix some documentation warnings
	o Added help file for Smoking

Version 0.02-1 (11-28-2010)
	o Added data set 'Smoking'
	o Added help files for Plot3d and Smoking
	o Started fixing bugs with Plot3d

Version 0.02
	o Initial version on R-Forge
