@@ -1,76 +1,0 @@
-\name{Identify3d.formula}
-\Rdversion{1.1}
-\alias{Identify3d.formula}
-%- Also NEED an '\alias' for EACH other topic documented here.
-\title{
-Identify 3D -- formula
-}
-\description{
-%%  ~~ A concise (1-5 lines) description of what the function does. ~~
-}
-\usage{
-Identify3d.formula(formula = attr(data, "formula"), data = sys.parent(), labels = NULL, adj = 0, ...)
-}
-%- maybe also 'usage' for other objects documented here.
-\arguments{
-  \item{formula}{
-%%     ~~Describe \code{formula} here~~
-}
-  \item{data}{
-%%     ~~Describe \code{data} here~~
-}
-  \item{labels}{
-%%     ~~Describe \code{labels} here~~
-}
-  \item{adj}{
-%%     ~~Describe \code{adj} here~~
-}
-  \item{\dots}{
-%%     ~~Describe \code{\dots} here~~
-}
-}
-\details{
-%%  ~~ If necessary, more details than the description above ~~
-}
-\value{
-%%  ~Describe the value returned
-%%  If it is a LIST, use
-%%  \item{comp1 }{Description of 'comp1'}
-%%  \item{comp2 }{Description of 'comp2'}
-%% ...
-}
-\references{
-%% ~put references to the literature/web site here ~
-}
-\author{
-Georges Monette
-}
-\note{
-%%  ~~further notes~~
-}
-
-%% ~Make other sections like Warning with \section{Warning }{....} ~
-
-\seealso{
-%% ~~objects to See Also as \code{\link{help}}, ~~~
-}
-\examples{
-##---- Should be DIRECTLY executable !! ----
-##-- ==>  Define data, use random,
-##--	or do  help(data=index)  for the standard data sets.
-
-## The function is currently defined as
-function( formula = attr(data, "formula"),
-            data = sys.parent()  , labels = NULL , adj = 0,  ...) {
-    env <- environment(formula)
-    labels <- eval(substitute(labels), data, env)
-    if ( is.null(labels)) labels <- rownames(data)
-    dd <- model.frame( formula, data )
-    if ( ncol(dd) < 3) stop( "Need at least three variables for identify3d")
-    Identify3d( dd[[2]], dd[[1]], dd[[3]], labels = labels, adj = adj, ...)
-  }
-}
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
-\keyword{ ~kwd1 }
-\keyword{ ~kwd2 }% __ONLY ONE__ keyword per line
