@@ -16,6 +16,7 @@ Version 0.02-2 (05-27-2011) (MF)
 	o Fix some documentation warnings
 	o Added help file for Smoking
 
+[[ The CHANGES file is now deprecated in favor of NEWS]]
 
 
  
